added background image and music

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <script src="work.js"></script>
 </head>
 <body>
-    Hello world
+    <audio id="background-audio" src="music/slowmotion.mp3" loop></audio>
+    <div class="theme">
+        Background: 
+        <button type="button" class="theme_button" id="t1">Space</button>
+        <button type="button" class="theme_button" id="t2">Ocean</button>
+        <button type="button" class="theme_button" id="t3">Jungle</button><br>
+        Music:
+        <button type="button" class="theme_button" id="m1">On</button>
+        <button type="button" class="theme_button" id="m2">Off</button>
+    </div>
 </body>
 </html>
