added bord buttons and fix colors

--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
         <button type="button" class="theme_button" id="m1">On</button>
         <button type="button" class="theme_button" id="m2">Off</button>
     </div>
+    <div class="main">
+        <h1><u>Tic Tac Toe</u></h1><br>
+        <button type="button" class="bord_button" id="1">-</button><button type="button" class="bord_button" id="2">-</button><button type="button" class="bord_button" id="3">-</button><br>
+        <button type="button" class="bord_button" id="4">-</button><button type="button" class="bord_button" id="5">-</button><button type="button" class="bord_button" id="6">-</button><br>
+        <button type="button" class="bord_button" id="7">-</button><button type="button" class="bord_button" id="8">-</button><button type="button" class="bord_button" id="9">-</button>
+
+    </div>
 </body>
 </html>
