change buttons lies and colors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="work.js"></script>
 </head>
+
 <body>
     <audio id="background-audio" src="music/slowmotion.mp3" loop></audio>
     <div class="theme">
-        Background: 
+        Background:
         <button type="button" class="theme_button" id="t1">Space</button>
         <button type="button" class="theme_button" id="t2">Ocean</button>
         <button type="button" class="theme_button" id="t3">Jungle</button><br>
@@ -22,10 +24,17 @@
     </div>
     <div class="main">
         <h1><u>Tic Tac Toe</u></h1><br>
-        <button type="button" class="bord_button" id="1">-</button><button type="button" class="bord_button" id="2">-</button><button type="button" class="bord_button" id="3">-</button><br>
-        <button type="button" class="bord_button" id="4">-</button><button type="button" class="bord_button" id="5">-</button><button type="button" class="bord_button" id="6">-</button><br>
-        <button type="button" class="bord_button" id="7">-</button><button type="button" class="bord_button" id="8">-</button><button type="button" class="bord_button" id="9">-</button>
+        <button type="button" class="bord_button" id="1">-</button><button type="button" class="bord_button"
+            id="2">-</button><button type="button" class="bord_button" id="3">-</button><br>
+        <button type="button" class="bord_button" id="4">-</button><button type="button" class="bord_button"
+            id="5">-</button><button type="button" class="bord_button" id="6">-</button><br>
+        <button type="button" class="bord_button" id="7">-</button><button type="button" class="bord_button"
+            id="8">-</button><button type="button" class="bord_button" id="9">-</button><br>
 
+        <p id="txt"><sub>.</sub> </p>
+        <p id="txt2"><sub>.</sub> </p>
+        <button type="button" class="reset" id="reset">Reset</button>
     </div>
 </body>
+
 </html>
