added reset button and X O click potion

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <button type="button" class="bord_button" id="7">-</button><button type="button" class="bord_button"
             id="8">-</button><button type="button" class="bord_button" id="9">-</button><br>
 
-        <p id="txt"><sub>.</sub> </p>
-        <p id="txt2"><sub>.</sub> </p>
+        <p id="txt">Player 1's trun</p>
+        <p id="txt2">.</p>
         <button type="button" class="reset" id="reset">Reset</button>
     </div>
 </body>
