fixed length of html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </h2>
         <button type="button" class="reset" id="reset">Reset</button>
     </div>
+    <br><br><br><br><br><sup>.</sup>
 </body>
 
 </html>
